fix: bkm: unaligned separator

--- a/src/styles/bookmark-node.styl
+++ b/src/styles/bookmark-node.styl
@@ -77,7 +77,7 @@
   &:after
     content: ''
     position: absolute
-    top: calc(50% - 1px)
+    top: calc(var(--bookmarks-separator-height) / 2 - 0.5px)
     left: 8px
     width: calc(100% - 16px)
     height: 1px
